--- a/public/css/app.css
+++ b/public/css/app.css
@@ -158,3 +158,30 @@ table tr th {
 .desc:after {
     content: " ↓";
 }
+
+body,
+html{
+	height: 100%;
+	width: 100%;
+	font-size: 16px;
+	position: relative;
+}
+.login{
+	width: 300px;
+	border: 1px solid #E1E1E1;
+	border-radius: 4px;
+	padding: 15px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+@media (max-width: 400px){
+	.login{
+		width: 90%;
+	}
+}
+
+
+
+
